# cse380-2020

./: LICENSE  README.md
hw02/: add.sh  compiled_pi.cpp  factorial.sh  garbage.dump  iter.err  iter.temp  iter_job_file.sh  pi.sh  run_aggregate.sh  run_compiled_pi.sh  run_script_pi.sh  tri.sh
hw03/: Makefile  asymptote.sh  integration.cpp  simpson.out  trapezoid.out
hw03/make/: Makefile
hw04/: Makefile  main.tex
proj01/: Makefile.am  configure.ac
proj01/src/: Makefile.am  helper_functions.cpp  input_parsing.cpp  iterative_solvers.cpp  main.cpp  vectors_and_matrices_1D.cpp  vectors_and_matrices_2D.cpp
proj01/test/: 1D_check.cpp  1D_check_ref_output  2D_check.cpp  2D_check_ref_output  Makefile.am  gauss_seidel_test_1D.cpp  gauss_seidel_test_2D.cpp  helper_functions.cpp  iterative_solvers.cpp  jacobi_test_1D.cpp  jacobi_test_2D.cpp  tests.sh  vectors_and_matrices_2D.cpp
proj02/: Makefile.am  configure.ac
proj02/src/: Makefile.am  hdf5_plot.py  helper_functions.cpp  input_parsing.cpp  main.cpp  petsc_plugin.hpp
proj02/test/: 1D_check.cpp  2D_check.cpp  Makefile.am  gauss_seidel_1D_2nd_order_ref_out.h5  gauss_seidel_1D_4th_order_ref_out.h5  gauss_seidel_2D_2nd_order_ref_out.h5  gauss_seidel_2D_4th_order_ref_out.h5  gauss_seidel_test_1D_2nd_order.cpp  gauss_seidel_test_1D_4th_order.cpp  gauss_seidel_test_2D_2nd_order.cpp  gauss_seidel_test_2D_4th_order.cpp  helper_functions.hpp  iterative_solvers.hpp  jacobi_1D_2nd_order_ref_out.h5  jacobi_2D_2nd_order_ref_out.h5  jacobi_test_1D_2nd_order.cpp  jacobi_test_2D_2nd_order.cpp  tests.sh
